fix footer spacing

--- a/assets/styles/_templates.scss
+++ b/assets/styles/_templates.scss
@@ -86,7 +86,7 @@
 .footer {
   text-align: center;
   margin-top: $v*2;
-  padding-bottom: $v*2.5;
+  padding-bottom: $v*2;
   @extend %h5;
 }
 
